--- a/templates/resolved.conf.j2
+++ b/templates/resolved.conf.j2
@@ -1,6 +1,10 @@
 # {{ ansible_managed }}
 [Resolve]
+{% if systemd_resolved_dns | length %}
 DNS = {{ systemd_resolved_dns | join(' ') }}
+{% else %}
+DNS = {{ ansible_default_ipv4.gateway }}
+{% endif %}
 Domains = {{ systemd_resolved_domains | join(' ') }}
 LLMNR = {{ systemd_resolved_llmnr }}
 MulticastDNS = {{ systemd_resolved_multicastdns }}
