--- a/templates/resolved.conf.j2
+++ b/templates/resolved.conf.j2
@@ -5,6 +5,9 @@ DNS = {{ systemd_resolved_dns | join(' ') }}
 {% else %}
 DNS = {{ ansible_default_ipv4.gateway }}
 {% endif %}
+{% if (systemd_resolved_fallback_dns  | length) > 0 %}
+FallbackDNS = {{ systemd_resolved_fallback_dns | join(' ') }}
+{% endif %}
 Domains = {{ systemd_resolved_domains | join(' ') }}
 LLMNR = {{ systemd_resolved_llmnr }}
 MulticastDNS = {{ systemd_resolved_multicastdns }}
